       at the end. (Daniel Sahlberg)
- NEW: add autocomplete functionality in the log dialog 
       used in Repository browser. (Daniel Sahlberg)
- BUG: Crash in TMerge when doing Redo after saving. (Stefan)
- BUG: hook scripts specified with %REPOROOT% were not
       executed correctly for paths more than two
       levels down the root. (Stefan)

Version 1.14.3
- BUG: clipboard wasn't closed after pasting into
       the filter control in the log dialog. (Stefan)
- BUG: when merging via log dialog, a warning was falsely
        shown "The target has local modifications". (Stefan)

Version 1.14.2
- BUG: when starting a log dialog from an existing
       log dialog, the project properties were
       not read anymore. (Stefan)
- BUG: When line-wrapping is on in TMerge and
       the window is resized, the current line
       was not kept in the view. (Stefan)
- BUG: reload in TMerge with collapsed lines
       moved the view, the top line was not
       kept in place. (Stefan)
- BUG: TortoiseBlame crashed when searching
       upwards from the last line. (Stefan)
- BUG: Redo in TMerge failed to mark the document
       as modified. (Stefan)
- BUG: race condition when syncing settings. (Stefan)
- NEW: integration for context menu in
       Windows 11. (Stefan)
- CHG: F1 opens help online. (Stefan)
- BUG: menu bars in dark mode were
       not really dark. (Stefan)

Version 1.14.1
- BUG: TortoiseMerge crashed if configured to
       not use Ribbons. (Stefan)
- BUG: Bugtraq links in log dialog didn't
       work anymore. (Stefan)
- BUG: various problems with dark theme. (Stefan)
- BUG: TortoiseBlame showd NUL chars if the
       file contained an utf8 BOM. (Stefan)
- BUG: Crash in ProjectMonitor when rearranging
       the tree view. (Stefan)
- BUG: opening the properties dialog from command
       line with param /property showed wrong or
       empty values. (Stefan)
- BUG: hook scripts were executed for wc's that
       didn't have them set up when updating